--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -3,10 +3,8 @@ name: Java CI
 on: [push]
 
 jobs:
-  build:
-
+  publish:
     runs-on: ubuntu-latest
-
     steps:
     - name: Setup Java
       uses: actions/setup-java@v2
@@ -17,6 +15,6 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
       run: |
-        mkdir ~/.m2
+        mkdir -p ~/.m2
         echo "<settings><servers><server><id>github</id><username>SSTentacleSS</username><password>${GITHUB_TOKEN}</password></server></servers></settings>" > ~/.m2/settings.xml
         mvn deploy
