--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <packaging>maven-plugin</packaging>
 
   <name>Mindustry Debug Maven Plugin</name>
-  <version>1.0.3</version>
+  <version>1.0.7</version>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -17,35 +17,30 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.apache.commons</groupId>
+      <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
-      <version>1.3.2</version>
+      <version>2.11.0</version>
     </dependency>
 
     <dependency>
         <groupId>org.apache.maven</groupId>
         <artifactId>maven-plugin-api</artifactId>
-        <version>3.6.3</version>
+        <version>3.8.6</version>
+        <scope>provided</scope>
     </dependency>
     
     <dependency>
         <groupId>org.apache.maven.plugin-tools</groupId>
         <artifactId>maven-plugin-annotations</artifactId>
-        <version>3.6.0</version>
+        <version>3.6.4</version>
         <scope>provided</scope>
     </dependency>
     
     <dependency>
         <groupId>org.apache.maven</groupId>
         <artifactId>maven-project</artifactId>
-        <version>2.2.1</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.maven.plugin-tools</groupId>
-      <artifactId>maven-plugin-annotations</artifactId>
-      <version>3.6.4</version>
-      <scope>provided</scope>
+        <version>3.0-alpha-2</version>
+        <scope>provided</scope>
     </dependency>
   </dependencies>
 
