--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   
-  <groupId>tentacle.mindustry</groupId>
+  <groupId>io.github.SSTentacleSS.mindustry</groupId>
   <artifactId>mindustry-debug-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
 
