--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -23,10 +23,11 @@ jobs:
         key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-maven-
-    - name: Deploy to Github Package Registry
+    - name: Deploy to Sonatype Package Registry
       env:
-        GITHUB_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
+        SONATYPE_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
+        SONATYPE_USERNAME: ${{ secrets.PUBLISH_USERNAME }}
       run: |
         mkdir -p ~/.m2
-        echo "<settings><servers><server><id>github</id><username>SSTentacleSS</username><password>${GITHUB_TOKEN}</password></server></servers></settings>" > ~/.m2/settings.xml
-        mvn deploy -Dregistry=https://maven.pkg.github.com/phanatic -Dtoken=$GH_TOKEN
+        echo "<servers><server><id>sonatype-nexus-snapshots</id><username>${SONATYPE_USERNAME}</username><password>${SONATYPE_TOKEN}</password></server><server><id>sonatype-nexus-staging</id><username>${SONATYPE_USERNAME}</username><password>${SONATYPE_TOKEN}</password></server></servers>" > ~/.m2/settings.xml
+        mvn deploy
