--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -27,7 +27,8 @@ jobs:
       env:
         SONATYPE_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
         SONATYPE_USERNAME: ${{ secrets.PUBLISH_USERNAME }}
+        GPG_PASSWORD: ${{ secrets.GPG_PASSWORD }}
       run: |
         mkdir -p ~/.m2
         echo "<servers><server><id>sonatype-nexus-snapshots</id><username><![CDATA[${SONATYPE_USERNAME}]]></username><password><![CDATA[${SONATYPE_TOKEN}]]></password></server><server><id>sonatype-nexus-staging</id><username><![CDATA[${SONATYPE_USERNAME}]]></username><password><![CDATA[${SONATYPE_TOKEN}]]></password></server></servers>" > ~/.m2/settings.xml
-        mvn deploy
+        mvn deploy -Dgpg.passphrase="${GPG_PASSWORD}"
