--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -35,4 +35,4 @@ jobs:
       run: |
         mkdir -p ~/.m2
         echo "<settings><servers><server><id>ossrh</id><username><![CDATA[${SONATYPE_USERNAME}]]></username><password><![CDATA[${SONATYPE_TOKEN}]]></password></server></servers></settings>" > ~/.m2/settings.xml
-        mvn clean deploy -Dgpg.passphrase=${{ secrets.OSSRH_GPG_SECRET_KEY_PASSWORD }}
+        mvn clean deploy -P release -Dgpg.passphrase=${{ secrets.OSSRH_GPG_SECRET_KEY_PASSWORD }}
