--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -16,7 +16,7 @@ jobs:
       with:
         distribution: 'zulu'
         java-version: 16
-    - name: Caching Dependencies
+    - name: Cache local Maven repository
       uses: actions/cache@v2
       with:
         path: ~/.m2/repository
