--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
   <name>Mindustry Debug Maven Plugin</name>
   <description>Maven plugin for debugging Mindustry</description>
   <version>1.1.0</version>
+  <url>https://github.com/SSTentacleSS/MavenMindustryDebugPlugin</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
