--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
   
   <groupId>io.github.SSTentacleSS.mindustry</groupId>
   <artifactId>mindustry-maven-plugin</artifactId>
-  <packaging>maven-plugin</packaging>
+  <packaging><?m2e ignore?>maven-plugin</packaging>
 
   <name>Mindustry Debug Maven Plugin</name>
   <description>Maven plugin for developing Mindustry</description>
-  <version>1.1.3</version>
+  <version>1.1.4</version>
   <url>https://github.com/SSTentacleSS/MindustryMavenPlugin</url>
 
   <licenses>
