Fix wrapper errors in windows

--- a/src/main/resources/editors/.vscode/tasks.json
+++ b/src/main/resources/editors/.vscode/tasks.json
@@ -9,7 +9,7 @@
                 "command": ".\\mvnw.cmd"
             },
             "args": [
-                "wrapper:wrapper", "clean", "package"
+                "clean", "package"
             ],
             "group": "build"
         },
