--- a/src/main/resources/editors/.vscode/tasks.json
+++ b/src/main/resources/editors/.vscode/tasks.json
@@ -7,6 +7,9 @@
             "args": [
                 ".vscode/scripts/mvn.sh", "clean package"
             ],
+            "presentation": {
+                "showReuseMessage": false
+            },
             "group": "build"
         },
         {
@@ -18,10 +21,6 @@
             ],
             "isBackground": true,
             "presentation": {
-                "echo": true,
-                "reveal": "always",
-                "focus": false,
-                "panel": "shared",
                 "showReuseMessage": false,
                 "clear": true
             },
