--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
   <name>Mindustry Debug Maven Plugin</name>
   <description>Maven plugin for developing Mindustry</description>
-  <version>1.2-a5</version>
+  <version>1.3</version>
   <url>https://github.com/SSTentacleSS/MindustryMavenPlugin</url>
 
   <licenses>
