--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,13 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   
-  <groupId>io.github.SSTentacleSS.mindustry</groupId>
+  <groupId>io.github.ss_tentacle_ss.mindustry</groupId>
   <artifactId>mindustry-maven-plugin</artifactId>
   <packaging><?m2e ignore?>maven-plugin</packaging>
 
   <name>Mindustry Debug Maven Plugin</name>
   <description>Maven plugin for developing Mindustry</description>
-  <version>1.3</version>
+  <version>1.3.1-alpha</version>
   <url>https://github.com/SSTentacleSS/MindustryMavenPlugin</url>
 
   <licenses>
@@ -66,6 +66,13 @@
   </dependencies>
 
   <build>
+    <sourceDirectory>src/java</sourceDirectory>
+    <resources>
+      <resource>
+        <directory>src/resources</directory>
+      </resource>
+    </resources>
+
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
